# ai-invoice-automate-backend

./: .gitignore  IMPLEMENTATION_GUIDE.md  README_GMAIL_API.md  README_LEDGER_MODULE.md  client_secret_11417407491-lgik9bmqa79n84pbm9fnkqd8u51deqim.apps.googleusercontent.com.json  pyproject.toml  requirements.txt  sample_chart_of_accounts.json
app/: main.py
app/models/: accounting.py  bank_transactions.py  billing.py  gmail_models.py  modelo.py
app/repos/: accounting_repo.py  bank_repo.py  billing_repo.py  modelo_repo.py
app/routes/: accounting.py  api.py  auth.py  bank_transactions.py  billing.py  dashboard.py  gmail_api.py  ledger.py  ledgers.py  modelo.py  ocr.py  outlook_api.py  project.py  report.py  voucher.py
app/services/: accounting_service.py  bank_parser.py  billing_automation_service.py  gmail_service.py  payment_matching_service.py  stripe_service.py
app/tasks/: scheduled_billing.py
app/utils/: pdf_generator.py
